prodMetadata/src/objects/AIR__c.object
<CustomObject>
    <description>After Impact Review</description>
    <fields>
        <fullName>AAR_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AAR Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_ID__c</fullName>
        <description>Can&apos;t have lookup to Activities so using a text field instead to store the ID.</description>
        <label>Activity ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Link__c</fullName>
        <formula>if(isblank(Activity_ID__c), &quot;&quot;, HYPERLINK(&quot;/&quot; +  Activity_ID__c, &quot;View Related Activity&quot;  ))</formula>
        <label>Activity Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_survey_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendee survey sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Event_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked box indicates this event / activity impacted community.</description>
        <inlineHelpText>Checked box indicates this event / activity impacted community.</inlineHelpText>
        <label>Community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_for_Followup_Note__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact for Followup Note</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Event_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DC_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DC Event</label>
        <referenceTo>DC_Event__c</referenceTo>
        <relationshipLabel>AIRs</relationshipLabel>
        <relationshipName>AIRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Draft_Language_for_ED__c</fullName>
        <inlineHelpText>Draft text for CEO to send to External POC</inlineHelpText>
        <label>Draft Language for E.D.</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Education</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked box indicates this event / activity impacted employment.</description>
        <inlineHelpText>Checked box indicates this event / activity impacted employment.</inlineHelpText>
        <label>Employment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>IAVAEvent__c</referenceTo>
        <relationshipLabel>AIRs</relationshipLabel>
        <relationshipName>AIRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_POC__c</fullName>
        <formula>IF (NOT (ISBLANK ( Campaign__c)),  HYPERLINK(&quot;/&quot;+   Campaign__r.External_POC__c     ,     Campaign__r.External_POC__r.FirstName  +&quot; &quot; +   Campaign__r.External_POC__r.LastName )   , 
IF (NOT (ISBLANK ( Give__c )),  HYPERLINK(&quot;/&quot;+ Give__r.External_POC__r.Id   ,    Give__r.External_POC__r.FirstName +&quot; &quot; +  Give__r.External_POC__r.LastName   )  , &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External POC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_up_Note_sent_to_Personal_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow-up Note sent to Personal Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Give__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Give</label>
        <referenceTo>Give__c</referenceTo>
        <relationshipName>Event_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Health__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Health</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hot_Wash_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hot Wash Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact_Overview__c</fullName>
        <label>Impact Overview</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link_to_Posted_Success_Story__c</fullName>
        <label>Link to Posted Success Story</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Local_wrap_up_email_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Local wrap-up email sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_of_Event__c</fullName>
        <formula>IF (NOT (ISBLANK ( Campaign__c)),  Campaign__r.Location_City__c , 
IF (NOT (ISBLANK ( Give__c )),  Give__r.City_Formula__c  ,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location of Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Money_Raised__c</fullName>
        <formula>Campaign__r.HierarchyAmountWonOpportunities</formula>
        <label>Money Raised</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Note_for_Relationship_Mgr__c</fullName>
        <inlineHelpText>Include notes for the IAVA staff person that is managing this relationship.</inlineHelpText>
        <label>Note for Relationship Mgr</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Num_Attended__c</fullName>
        <formula>IF (NOT (ISBLANK (  Event__c )),  Event__r.Number_of_Attendees__c ,
IF (NOT (ISBLANK ( Campaign__c)),   Campaign__r.Num_Attended__c   ,
IF (NOT (ISBLANK ( Give__c )),  Give__r.Num_Attended__c  , 
VALUE(&quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Num. Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Confirmed__c</fullName>
        <formula>IF (NOT (ISBLANK (  Event__c )), ( Event__r.Num_Replies_Yes__c ),
IF (NOT (ISBLANK ( Campaign__c)),  (Campaign__r.Num_Confirmed__c +  Campaign__r.Num_Attended__c ) ,
IF (NOT (ISBLANK ( Give__c )),  Give__r.Number_of_Confirmed_Units__c  , VALUE(&quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Num. Confirmed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Units__c</fullName>
        <formula>IF (NOT (ISBLANK (   Event__c )),  Event__r.Reply_Cap__c  ,
IF (NOT (ISBLANK (  Campaign__c)),  Campaign__r.Expected_Size__c ,
IF (NOT (ISBLANK (  Give__c )),  Give__r.Number_of_Units__c , VALUE(&quot;&quot;))))</formula>
        <label>Num. Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OK_to_Publish_Success_Story__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OK to Publish Success Story</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Photos_posted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Photos should be attached to this record.</description>
        <inlineHelpText>Photos should be attached to this record.</inlineHelpText>
        <label>Photos posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Focus_Areas__c</fullName>
        <label>Related Focus Areas</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Employment</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reported_Amount_of_Money_Raised__c</fullName>
        <description>Amount of money raised at the event</description>
        <inlineHelpText>Amount of money raised at the event</inlineHelpText>
        <label>Reported Amount of Money Raised</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reported_Number_of_New_Contacts__c</fullName>
        <description>Number of new leads</description>
        <inlineHelpText>Number of new leads generated by this event</inlineHelpText>
        <label>Reported Number of New Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Follow_up_to_EO__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked, an email is sent to the Executive Office including the &quot;Draft Language for E.D.&quot; text</inlineHelpText>
        <label>Send Follow-up to EO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date_Override__c</fullName>
        <description>This will override start date pulled from parent or be used in the absence of a parent record.</description>
        <inlineHelpText>This will override start date pulled from parent or be used in the absence of a parent record.</inlineHelpText>
        <label>Start Date Override</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_of_Event__c</fullName>
        <description>Gets the date from either the associated Give or Campaign.</description>
        <formula>IF (NOT(ISBLANK ( Start_Date_Override__c )),  Start_Date_Override__c ,
IF (NOT (ISBLANK ( Campaign__c)), Campaign__r.StartDate , 
IF (NOT (ISBLANK ( Give__c )), Give__r.Earliest_Start_Date__c , 
IF (NOT(ISBLANK ( Track_a_Call__c )),  Track_a_Call__r.Date_of_Call__c ,
IF (NOT (ISBLANK ( DC_Event__c )),  DC_Event__r.Date_and_Time__c ,
NULL)))))</formula>
        <label>Start Date of Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Success_Story_Posted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Success Story Posted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Success_Story__c</fullName>
        <label>Success Story</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary_Negative__c</fullName>
        <label>Summary - Negative</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summary_Positive__c</fullName>
        <label>Summary - Positive</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Track_a_Call__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Track a Call</label>
        <referenceTo>Activity_Junction__c</referenceTo>
        <relationshipLabel>AIRs</relationshipLabel>
        <relationshipName>AIRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vets_affected__c</fullName>
        <label>Vets affected</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AIR</label>
    <listViews>
        <fullName>AIRs_owned_by_site_guest_users</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Completed__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>contains</operation>
            <value>site</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>contains</operation>
            <value>guest</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>guest</value>
        </filters>
        <label>AIRs owned by site guest users</label>
        <sharedTo>
            <group>Sysadmins</group>
            <role>SystemAdministrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>C2CS_Concert_Series</fullName>
        <columns>NAME</columns>
        <columns>Completed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>linkin park at,miller coors at,mayhem at,gaga at</value>
        </filters>
        <label>C2CS Concert Series</label>
    </listViews>
    <listViews>
        <fullName>Created_in_the_last_2_months</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Completed__c</columns>
        <columns>Contact_for_Followup_Note__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <label>Created in the last 2 months</label>
    </listViews>
    <listViews>
        <fullName>Incomplete_AIRS</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Completed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Incomplete AIRS</label>
    </listViews>
    <listViews>
        <fullName>My_AIRs</fullName>
        <columns>NAME</columns>
        <columns>Completed__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My AIRs</label>
    </listViews>
    <nameField>
        <label>AIR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AIRs</pluralLabel>
    <recordTypes>
        <fullName>Confidential_Cs_Only</fullName>
        <active>true</active>
        <description>These AIRs can only be seen by Chiefs</description>
        <label>Confidential - Cs Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_AIR</fullName>
        <active>true</active>
        <label>Standard AIR</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Only_one_source_record</fullName>
        <active>false</active>
        <description>These reports must have only one source. If Give is not blank and Campaign is not blank, return an error.</description>
        <errorConditionFormula>AND (NOT (ISBLANK ( Give__c )),NOT (ISBLANK ( Campaign__c )))</errorConditionFormula>
        <errorDisplayField>Campaign__c</errorDisplayField>
        <errorMessage>These reports must have only one source. Please associate with either a Give or a Campaign only, but not both.</errorMessage>
    </validationRules>
</CustomObject>